fix line length on mobile

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -4,16 +4,17 @@
 }
 
 #showcase .hat-1 {
-    font-size: 48px;
+    font-size: 2.5em;
     font-weight: 800;
-    letter-spacing: -0.2px;
+    letter-spacing: -1px;
     margin-bottom: 10px;
     text-align: left;
 }
 #showcase h1 {
     margin-top: 5px;
     font-weight: 300;
-    font-size: 48px;
+    font-size: 2.1em;
+    letter-spacing: -1px;
 }
 #changelog small,
 #changelog h1,
